--- a/IlseOjeda/Practica 5/index.html
+++ b/IlseOjeda/Practica 5/index.html
@@ -15,51 +15,61 @@
         <h2>Selector universal</h2>
         <p>Se utiliza para seleccionar todos los elementos de una página web, aplicando estilos a todos ellos simultáneamente.</p>
         <img src="img/universal.png" alt="">
+        <img src="img/universal resultado.png" alt="">
     </section>
     <section>
         <h2>Selector de tipo</h2>
         <p>Selecciona y estiliza todos los elementos HTML de un tipo específico, simplemente usando el nombre de esa etiqueta HTML.</p>
         <img src="img/tipo.png" alt="">
+        <img src="img/tipo resultado.png" alt="">
     </section>
     <section>
         <h2>Selector por ID</h2>
         <p>Es una forma de apuntar a un elemento HTML específico y único dentro de una página web, utilizando su atributo id. </p>
         <img src="img/id.png" alt="">
+        <img src="img/id resultado.png" alt="">
     </section>
     <section>
         <h2>Selector por clase</h2>
         <p>Sirve para aplicar el mismo estilo a múltiples elementos, incluso de diferentes tipos, promoviendo la reutilización de estilos y la organización del código. </p>
         <img src="img/clase.png" alt="">
+        <img src="img/clase resultado.png" alt="">
     </section>
     <section>
         <h2>Selector de atributo</h2>
         <p>Permite aplicar estilos a elementos HTML basándose en la presencia o en el valor específico de sus atributos.</p>
         <img src="img/atributo.png" alt="">
+        <img src="img/atributo resultado.png" alt="">
     </section>
     <section>
         <h2>Selector por lista</h2>
         <p>Forma de aplicar un mismo estilo a varios elementos diferentes a la vez, separando los selectores individuales con comas.</p>
         <img src="img/lista.png" alt="">
+        <img src="img/lista resultado.png" alt="">
     </section>
     <section>
         <h2>Selector de descendientes</h2>
         <p>Permite seleccionar un elemento (o varios) que se encuentra dentro de otro elemento, sin importar cuán profunda sea la relación de descendencia o anidación.</p>
         <img src="img/descendientes.png" alt="">
+        <img src="img/descendiente resultado.png" alt="">
     </section>
     <section>
         <h2>Selector de hijos directos</h2>
         <p>Permite estilizar solo los elementos que son hijos inmediatos de otro elemento, distinguiéndolos de los nietos u otros descendientes.</p>
         <img src="img/hijos directos.png" alt="">
+        <img src="img/hijo directo resultado.png" alt="">
     </section>
     <section>
         <h2>Selector hermano adyacente</h2>
         <p>Aplica estilos al elemento que sigue inmediatamente a otro elemento especificado y que comparten el mismo elemento padre.</p>
         <img src="img/hermano adyacente.png" alt="">
+        <img src="img/hermano adyacente resultado.png" alt="">
     </section>
     <section>
         <h2>Selector hermano general</h2>
         <p>Selecciona todos los elementos hermanos de un elemento específico, que son hijos del mismo padre y aparecen después de ese elemento en el código HTML, sin importar si están o no inmediatamente adyacentes.</p>
         <img src="img/hermano general.png" alt="">
+        <img src="img/hermano general resultado.png" alt="">
     </section>
 
     <footer> 
