--- a/IlseOjeda/pasatiemposv2/gatos.html
+++ b/IlseOjeda/pasatiemposv2/gatos.html
@@ -19,27 +19,21 @@
         <img src="img/gato1.jpg" alt="">
         <p>Pasar tiempo con gatos ofrece beneficios físicos, como menor riesgo de <i>enfermedades cardiovasculares</i> y una posible mejora del <i>sistema inmunológico</i>, y mentales, como <i>reducción del estrés, ansiedad y depresión</i>, además de compañía y alegría. La interacción con felinos también puede fortalecer el sistema inmune y mejorar el estado de ánimo, e incluso ofrecer un efecto terapéutico en niños con autismo. 
         <video controls width="250" src="mp4/gato.mp4"></video>
-<table border="1" cellspacing="0" cellpadding="5">
-  <tr>
-    <th colspan="2"><mark>Beneficios para la salud física al convivir con gatos</mark></th>
-  </tr>
-  <tr>
-    <th>Beneficio</th>
-    <th>Descripción</th>
-  </tr>
-  <tr>
-    <td>Disminuye el riesgo de problemas cardiovasculares</td>
-    <td>Las personas que conviven con gatos tienen una menor probabilidad de sufrir fallos cardíacos e infartos.</td>
-  </tr>
-  <tr>
-    <td>Fortalece el sistema inmunológico</td>
-    <td>El ronroneo de los gatos puede potenciar la secreción de endorfinas y fortalecer el sistema inmune, ayudando a mejorar la salud respiratoria.</td>
-  </tr>
-  <tr>
-    <td>Reduce la presión arterial</td>
-    <td>Al disminuir los niveles de estrés y ansiedad, los gatos también contribuyen a reducir la presión arterial.</td>
-  </tr>
-</table>
+<h3>Beneficios para la salud física al convivir con gatos</h3>
+<ol>
+  <li>
+    <strong>Disminuye el riesgo de problemas cardiovasculares:</strong>  
+    Las personas que conviven con gatos tienen una menor probabilidad de sufrir fallos cardíacos e infartos.
+  </li>
+  <li>
+    <strong>Fortalece el sistema inmunológico:</strong>  
+    El ronroneo de los gatos puede potenciar la secreción de endorfinas y fortalecer el sistema inmune, ayudando a mejorar la salud respiratoria.
+  </li>
+  <li>
+    <strong>Reduce la presión arterial:</strong>  
+    Al disminuir los niveles de estrés y ansiedad, los gatos también contribuyen a reducir la presión arterial.
+  </li>
+</ol>
       </section>
     </article>
   <br>
