Selectores hermano adyacente, general e hijo directo

--- a/victoriabalderas/selectores/index.html
+++ b/victoriabalderas/selectores/index.html
@@ -90,9 +90,9 @@
                 <h2>Selector de hijos directos</h2>
             </header>
             <h3>Código en CSS</h3>
-            <img src="" alt="Código en CSS">
+            <img src="capturas/s_hijodirecto.png" alt="Código en CSS">
             <h3>Resultado en HTML</h3>
-            <img src="" alt="Resultado en HTML">
+            <img src="capturas/r_selectorhijodirecto.png" alt="Resultado en HTML">
         </section>
         <hr>
         
@@ -101,9 +101,9 @@
                 <h2>Selector hermano adyacente</h2>
             </header>
             <h3>Código en CSS</h3>
-            <img src="" alt="Código en CSS">
+            <img src="capturas/s_hermanoadyacente.png" alt="Código en CSS">
             <h3>Resultado en HTML</h3>
-            <img src="" alt="Resultado en HTML">
+            <img src="capturas/r_hermanoadyacente.png" alt="Resultado en HTML">
         </section>
         <hr>
 
@@ -112,12 +112,11 @@
                 <h2>Selector hermano general</h2>
             </header>
             <h3>Código en CSS</h3>
-            <img src="" alt="Código en CSS">
+            <img src="capturas/s_hermanogeneral.png" alt="Código en CSS">
             <h3>Resultado en HTML</h3>
-            <img src="" alt="Resultado en HTML">
+            <img src="capturas/r_hermanogeneral.png" alt="Resultado en HTML">
         </section>
         <hr>
-       
     </main>
 </body>
 </html>
