--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -35,6 +35,8 @@
             </section>
             <section id="s505">
                 <h3>Selector por atributo</h3>
+                <img width="300px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por atributo">
+                <img src="imgselectores/selectoratributoresult.png" alt="Resultado del Selector por atributo">
             </section>
             <section id="s505">
                 <h3>Selector de lista</h3>
