Inserción de selector de lista

--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -40,6 +40,8 @@
             </section>
             <section id="s505">
                 <h3>Selector de lista</h3>
+                <img width="300px" src="imgselectores/selectorlistacss.png" alt="Codigo CSS del Selector por atributo">
+                <img src="imgselectores/selectorlistaresult.png" alt="Resultado del Selector por atributo">
             </section>
             <section id="s505">
                 <h3>Selector por descendientes</h3>
