agregar descripcion de capturas

--- a/Marikve7/Practica 5/selectores.html
+++ b/Marikve7/Practica 5/selectores.html
@@ -22,6 +22,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>En este selector universal se selecciono el id n01 de la seccion de actividad recreativa para así cambiar el color de  todas las letras a un color morado. </p>
                 <img width="350px" src="img_selectores/Universal.png" alt="Captura de selector universal">
 
                 <h4>Resultado:</h4>
@@ -37,6 +38,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>En este selector de tipo se selecciono el id n01 nuevamente pero ahora utilizando el header como tipo para así cambiarle el fondo a un color morado. </p>
                 <img width="350px" src="img_selectores/Tipo.png" alt="Captura de selector de Tipo">
 
                 <h4>Resultado:</h4>
@@ -52,6 +54,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>En este selector por ID se selecciono solamente el id n02 de un h3 para así cambiarle el fondo de color morado, ponerle margen y borde de morado. </p>
                 <img width="350px" src="img_selectores/Id.png" alt="Captura de selector por ID ">
 
                 <h4>Resultado:</h4>
@@ -67,6 +70,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>En este selector por clase se selecciono la clase .letra de unos td de la tabla (Bailar, Escuchar música y Ver series) para así cambiarles el  color a un fondo morado, la letra y el tamaño de la letra.</p>
                 <img width="350px" src="img_selectores/Clase.png" alt="Captura de selector por Clase ">
 
                 <h4>Resultado:</h4>
@@ -82,6 +86,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>Este selector agarra el id n03 y el atributo href para que los enlaces cambien de color de letra y también su color de fondo. </p>
                 <img width="350px" src="img_selectores/Atributo.png" alt="Captura de selector de atributo ">
 
                 <h4>Resultado:</h4>
@@ -97,6 +102,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>Este selector selecciona section y img para que a la sección y las imagenes se les agregue un borde doble morado y también un color de fondo lila. </p>
                 <img width="350px" src="img_selectores/Lista.png" alt="Captura de selector de Lista ">
 
                 <h4>Resultado:</h4>
@@ -112,6 +118,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>Este selector selecciona li que están dentro del elemento con id n04 para que tengan un color de fondo lila, el texto morado y un margen de 15 px.</p>
                 <img width="350px" src="img_selectores/Descendientes.png" alt="Captura de selector de Descendientes ">
 
                 <h4>Resultado:</h4>
@@ -127,6 +134,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>Este selector selecciona los párrafos (p) que son hijos directos de address para que tengan el texto morado, un fondo color plum y un ancho de 200 px.</p>
                 <img width="350px" src="img_selectores/Hijosdirect.png" alt="Captura de selector hijos directos ">
 
                 <h4>Resultado:</h4>
@@ -142,6 +150,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>Este selector selecciona los párrafos (p) que están justo después de un h3 dentro de article con id “n05” para que tengan un borde de 2 px sólido color rosa, fondo lila, texto morado y un margen de 10 px.</p>
                 <img width="350px" src="img_selectores/Hermanoadyc.png" alt="Captura de selector hermano adyacente ">
 
                 <h4>Resultado:</h4>
@@ -157,6 +166,7 @@
                 </header>
 
                 <h4>Código css:</h4>
+                <p>Este selector selecciona todos los párrafos (p) que estén después de un h3 dentro de article con id “n06” para que tengan fondo lila y texto morado.</p>
                 <img width="350px" src="img_selectores/Hermanognral.png" alt="Captura de selector hermano general">
 
                 <h4>Resultado:</h4>
