--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Selectores CSS</title>
-    <link rel="icon" href="" type="image/png">
+    <link rel="icon" href="imgselectores/iconselectores.png" type="image/png">
     <link rel="stylesheet" href="estilosselectores.css">
     <audio src="subwayselectoresstars.mp3" autoplay loop></audio>
 </head>
