--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -112,6 +112,28 @@
             </article>
         </section>
 
+        <section>
+            <header>
+                <h2>Práctica 6</h2>
+            </header>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis at voluptas sed omnis eveniet dolor tempore, ipsum deleniti veniam doloremque sunt totam, impedit numquam labore quis animi quidem eos fugit.</p>
+
+            <img src="https://liigabriel.github.io/evidenciasGpo52_AD2025/img/practicaFlexbox.jpg" alt="Captura de pantalla de la página Codepen.io">
+
+            <p>Enlace a la página codepen.io clon: </p>
+
+            <p>Enlaces requeridos: </p>
+            <ul>
+                <li>Link página diseño solicitado: <a href=""></a></li>
+                <li>Link commits: <a href=" https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-10&until=2025-09-12"> https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-08&until=2025-09-10</a></li>
+            </ul>
+
+            <p>Fecha de commits: 10 al 12 de Septiembre</p>
+
+        </section>
+
+        <hr>
 
     </main>
     <aside>
