Preparación para selectores de hijos

--- a/aLe.php27/pasatiempos_v2/pasatiempo1.html
+++ b/aLe.php27/pasatiempos_v2/pasatiempo1.html
@@ -17,24 +17,36 @@
     <h2>Hablando de favoritos...</h2>
     <div id="j1" class="divjuego">
         <img src="imagenes/balatro.jpg" alt="Balatro" class="divjuego-img">
+        <div class="divjuego-texto">
+        <h3>Balatro</h3>
         <p>¡<cite>Balatro</cite> es una joyita!<br>
         Es un roguelike de póker, pero no se trata de apostar dinero ni nada así, sino de armar combos con las manos de cartas y potenciar tu mazo con comodines y mejoras que cambian totalmente la partida. Cada run es distinta, porque siempre te salen combinaciones nuevas y puedes inventar estrategias loquísimas. Es quizas, de mis vicios más fuertes actualmente ya que lo puedo jugar basicamente en todos lados en mi celular, o si quiero una experiencia más comoda también está disponible en PC.</p>
+        </div>
     </div>
     <div id="j2" class="divjuego">
         <img src="imagenes/brawl.jpg" alt="Brawl Stars" class="divjuego-img">
+        <div class="divjuego-texto">
+        <h3>Brawl Stars</h3>
         <p><cite>Brawl Stars</cite> es mi relación tóxica.<br>
         Lo amo porque las partidas son rápidas, súper intensas y cada brawler tiene su estilo único que engancha; cuando me hago una jugada matona y me siento en un edit con phonk de fondo. Y que aparte le meto dinero y me siento poderoso...
         Pero también lo odio porque a veces el emparejamiento es injusto, me pone con puro bautista que se nota que acaba de instalarse el juego, estando yo en rangos altos o copas altas...</p>
+        </div>
     </div>
     <div id="j3" class="divjuego">
         <img src="imagenes/minecraft.png" alt="Minecraft" class="divjuego-img">
+        <div class="divjuego-texto">
+        <h3>Minecraft</h3>
         <p><cite>Minecraft</cite> lo cambia todo. <br>
         Desde pequeño me intereso mucho este titulo por yo consumir contenido de él en internet, youtubers que a dia de hoy son parte de mi infancia. Todavia me acuerdo cuando te hacian bullying por jugar Minecraft alla por 2014-2016. A día de hoy es un juego que disfruto mucho, más con la compañia de amigos en algun servidor modeado. Me gusta la versión de Java, pero mi corazón desde que conoci el juego le pertenece a la versión Bedrock, que es la de celulares, tablets, etc.</p>
+        </div>
     </div>
     <div id="j4" class="divjuego">
         <img src="imagenes/pvzgw.jpg" alt="Plantas vs Zombies Garden Warfare" class="divjuego-img">
+        <div class="divjuego-texto">
+        <h3>Plants vs Zombies: Garden Warfare</h3>
         <p><cite>Plantas vs Zombies: Garden Warfare</cite> el GOAT. <br>
         Quede impresionado de lo que pudieron hacer con la franquicia, tanto que hasta hace poco pude darme la oportunidad de probar este titulo por mi mismo y vaya que sigue siendo hermoso. La jugabilidad actualmente está muy obsoleta, ya que estamos hablando de un videojuego del 2014 si no me equivoco, actualmente los servidores en su mayoria están muertos pero en algunas ocasiones encuentras partidas llenas y son freneticas. Mi planta favorita de este titulo es el Cactus aunque sea pesimo jugandolo, y de zombie me quedo con el All-Star.</p>
+        </div>
     </div>
   </main>
   <aside class="asidepasatiempos">
