--- a/RdeReimer/pasaTimepoVer2/pagina1.html
+++ b/RdeReimer/pasaTimepoVer2/pagina1.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <nav class="navPages">
-        <a class="navLinks" href="pagina1.html">Musica</a>
-        <a class="navLinks" href="pagina2.html">Videojuegos</a>
-        <a class="navLinks" href="pagina3.html">Programacion</a>
-        <a class="navLinks" href="pagina4.html">Mtb</a>
-        <a class="navLinks" href="pagina5.html">Opiniones</a>
+        <ul>
+            <li> <a class="navLinks" href="pagina1.html">Musica</a></li>
+            <li> <a class="navLinks" href="pagina2.html">Videojuegos</a> </li>
+            <li> <a class="navLinks" href="pagina3.html">Programacion</a> </li>
+            <li> <a class="navLinks" href="pagina4.html">Mtb</a> </li>
+            <li> <a class="navLinks" href="pagina5.html">Opiniones</a> </li>
+        </ul>
     </nav>
-
     <header> <h1>Hobbys - Andres Leal</h1></header>
    <section>
     <header>
