Selector de descendientes agregado

--- a/aLe.php27/pasatiempos_v2/pasatiempo1.html
+++ b/aLe.php27/pasatiempos_v2/pasatiempo1.html
@@ -13,7 +13,7 @@
     <h1>🎮 Videojuegos</h1>
     <p>Pasatiempo al que más le invierto tiempo</p>
   </header>
-  <main class="mainpasatiempos">
+  <main class="mainpasatiempos" id="m1">
     <h2>Hablando de favoritos...</h2>
     <div id="j1" class="divjuego">
         <img src="imagenes/balatro.jpg" alt="Balatro" class="divjuego-img">
