--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -17,7 +17,7 @@
                 <h3>Selector universal</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="400px" src="imgselectores/selectoruniversalcss.png" alt="Codigo CSS del Selector universal">
+                <img width="600px" src="imgselectores/selectoruniversalcss.png" alt="Codigo CSS del Selector universal">
                     <p>Resultado</p>
                 <img width="600px" src="imgselectores/selectoruniversalresult.png" alt="Resultado del Selector universal">
                 </div>
@@ -35,7 +35,7 @@
                 <h3>Selector por id</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="250px" src="imgselectores/selectoridcss.png" alt="Codigo CSS del Selector por id">
+                <img width="300px" src="imgselectores/selectoridcss.png" alt="Codigo CSS del Selector por id">
                     <p>Resultado</p>
                 <img width="600px" src="imgselectores/selectoridresult.png" alt="Resultado del Selector por id">
                 </div>
@@ -53,7 +53,7 @@
                 <h3>Selector por atributo</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="300px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por atributo">
+                <img width="500px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por atributo">
                     <p>Resultado</p>
                 <img src="imgselectores/selectoratributoresult.png" alt="Resultado del Selector por atributo">
                 </div>
@@ -62,7 +62,7 @@
                 <h3>Selector de lista</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="300px" src="imgselectores/selectorlistacss.png" alt="Codigo CSS del Selector por lista">
+                <img width="400px" src="imgselectores/selectorlistacss.png" alt="Codigo CSS del Selector por lista">
                     <p>Resultado</p>
                 <img width="700px" src="imgselectores/selectorlistaresult.png" alt="Resultado del Selector por lista">
                 </div>
@@ -71,9 +71,9 @@
                 <h3>Selector por descendientes</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="300px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por atributo">
+                <img width="500px" src="imgselectores/selectordescendientescss.png" alt="Codigo CSS del Selector por descendiente">
                     <p>Resultado</p>
-                <img src="imgselectores/selectoratributoresult.png" alt="Resultado del Selector por atributo">
+                <img width="700px" src="imgselectores/selectordescendientesresult.png" alt="Resultado del Selector por descendiente">
                 </div>
             </section>
             <section id="s505">
