agregue al index la prctica-6

--- a/RdeReimer/index.html
+++ b/RdeReimer/index.html
@@ -158,6 +158,22 @@
             <li>Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-09-08&until=2025-09-10">https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-09-08&until=2025-09-10</a></li>
         </ul>
         </section>
+                <section>
+        <header>
+            <h4 class="centrado">Practica 6</h4>
+        </header>
+        <pre class="centrado-text">
+        Utilizando flexbox, cree un documento HTML donde se diseñe lo que se muestra en la imagen siguiente.
+
+        <img src="img/practica6.png" alt="imagen de referencia de la practica 6">
+
+        Fecha commits: 10 al 12 de Septiembre.
+        </pre>
+        <ul class="centrado-ul">
+            <li>Link Pagina Diseño Solicitado: <a href="https://fdw52ad2025.github.io/website52/RdeReimer/practica-6/index.html">https://fdw52ad2025.github.io/website52/RdeReimer/practica-6/index.html</a></li>
+            <li>Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-09-10&until=2025-09-12">https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-09-10until=2025-09-12</a></li>
+        </ul>
+        </section>
     </main>
     <aside></aside>
     <footer> 
