--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -117,11 +117,11 @@
                 <h2>Práctica 6</h2>
             </header>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis at voluptas sed omnis eveniet dolor tempore, ipsum deleniti veniam doloremque sunt totam, impedit numquam labore quis animi quidem eos fugit.</p>
+            <p>Utilizando flexbox, cree un documento HTML donde se diseñe lo que se muestra en la imagen siguiente.</p>
 
             <img src="https://liigabriel.github.io/evidenciasGpo52_AD2025/img/practicaFlexbox.jpg" alt="Captura de pantalla de la página Codepen.io">
 
-            <p>Enlace a la página codepen.io clon: </p>
+            <p>Enlace a la práctica: <a href="practica6/index.html">Práctica 6</a></p>
 
             <p>Enlaces requeridos: </p>
             <ul>
@@ -131,9 +131,9 @@
 
             <p>Fecha de commits: 10 al 12 de Septiembre</p>
 
-        </section>
+            <hr>
 
-        <hr>
+        </section>
 
     </main>
     <aside>
