--- a/jesuscruz125/practica6/index.html
+++ b/jesuscruz125/practica6/index.html
@@ -10,6 +10,7 @@
 
     <header>
         <h1>Práctica 6</h1>
+        <p class="back"><a href="/jesuscruz125/index.html">← Volver al índice principal</a></p>
     </header>
 
     <main>
@@ -44,14 +45,20 @@
                 </div>
             </div>
         </section>
-
-
+        <hr>
     </main>
     <aside>
-
+        <p>Recordatorio:</p>
+        <ol>
+            <li>display: flex → activa Flexbox y define contenedor flexible</li>
+            <li>flex-direction → organiza en fila (row) o columna (column)</li>
+            <li>justify-content / align-items → alinea elementos horizontal y verticalmente</li>
+        </ol>
+        <hr>
     </aside>
     <footer>
-
+        <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
+        <address>Monterrey, Nuevo León</address>
     </footer>
     
 </body>
