--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -80,9 +80,9 @@
                 <h3>Selector hijos directos</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="300px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por atributo">
+                <img width="400px" src="imgselectores/selectorhijodirectocss.png" alt="Codigo CSS del Selector por atributo">
                     <p>Resultado</p>
-                <img src="imgselectores/selectoratributoresult.png" alt="Resultado del Selector por atributo">
+                <img width="700px" src="imgselectores/selectorhijodirectoresult.png" alt="Resultado del Selector por atributo">
                 </div>
             </section>
             <section id="s505">
