Correción de alt en imagenes

--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -80,27 +80,27 @@
                 <h3>Selector hijos directos</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="400px" src="imgselectores/selectorhijodirectocss.png" alt="Codigo CSS del Selector por atributo">
+                <img width="400px" src="imgselectores/selectorhijodirectocss.png" alt="Codigo CSS del Selector por hijo directo">
                     <p>Resultado</p>
-                <img width="700px" src="imgselectores/selectorhijodirectoresult.png" alt="Resultado del Selector por atributo">
+                <img width="700px" src="imgselectores/selectorhijodirectoresult.png" alt="Resultado del Selector por hijo directo">
                 </div>
             </section>
             <section id="s505">
                 <h3>Selector hermano adyacente</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="300px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por atributo">
+                <img width="300px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por hermano adyacente">
                     <p>Resultado</p>
-                <img src="imgselectores/selectoratributoresult.png" alt="Resultado del Selector por atributo">
+                <img src="imgselectores/selectoratributoresult.png" alt="Resultado del Selector por hermano adyacente">
                 </div>
             </section>
             <section id="s505">
                 <h3>Selector hermano general</h3>
                 <div class="centradoselectores">
                     <p>Codigo CSS</p>
-                <img width="300px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por atributo">
+                <img width="300px" src="imgselectores/selectoratributocss.png" alt="Codigo CSS del Selector por hermano general">
                     <p>Resultado</p>
-                <img src="imgselectores/selectoratributoresult.png" alt="Resultado del Selector por atributo">
+                <img src="imgselectores/selectoratributoresult.png" alt="Resultado del Selector por hermano general">
                 </div>
             </section>
     </main>
