Correción en el index de la practica 5

--- a/Hugo-0699/pasatiemposmod/pasatiempo4.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo4.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagenes/iconlibro4.png" type="image/png">
 </head>
 <body>
-    <header> 
+    <header id="h1uni"> 
         <h1 id="titulo4">&star; LA ESCRITURA &star;</h1>
     </header>
     <main>
