--- a/Hugo-0699/selectores_css/index.html
+++ b/Hugo-0699/selectores_css/index.html
@@ -12,6 +12,7 @@
         <h1>&star; SELECTORES EN CSS &star;</h1>
     </header>
     <hr>
+    <hr>
     <main>
         <article class="articuloselector">
             <section class="sectionselector">
@@ -22,6 +23,7 @@
             <section class="sectionselector">
                 <h3>Selector por tipo</h3>
                 <img src="img_selectores/s_tipo.png" alt="">
+                <img src="img_selectores/s_tipo1.png" alt="">
                 <img src="img_selectores/s_tipo2.png" alt="">
             </section>
             <section class="sectionselector">
@@ -38,24 +40,37 @@
             </section>
             <section class="sectionselector">
                 <h3>Selector por Atributo</h3>
+                <img src="" alt="">
+                <img src="" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Lista</h3>
+                <img src="" alt="">
+                <img src="" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Descendientes</h3>
+                <img src="" alt="">
+                <img src="" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Hijos Directos</h3>
+                <img src="" alt="">
+                <img src="" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Hijos Adyacentes</h3>
+                <img src="" alt="">
+                <img src="" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Hermano General</h3>
+                <img src="" alt="">
+                <img src="" alt="">
             </section>
         </article>
     </main>
+    <hr>
     <footer class="footer">
         <address>
             <h4> &copy; Desarrollado por Hugo Alejandro Zapata Rosales</h4>
