--- a/Hugo-0699/pasatiemposmod/pasatiempo1.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo1.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagenes/iconoart.png" type="image/png">
 </head>
 <body>
-    <header> 
+    <header id="h1uni"> 
         <h1 id="titulo1">&star; El DIBUJO &star;</h1>
     </header>
     <hr>
