--- a/Hugo-0699/pasatiemposmod/pasatiempo2.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo2.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagenes/iconogames.png" type="image/png">
 </head>
 <body>
-    <header> 
+    <header id="h1uni"> 
         <h1 id="titulo2">&star; LOS VIDEO-JUEGOS &star;</h1>
     </header>
     <hr>
