--- a/Hugo-0699/pasatiemposmod/pasatiempo3.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo3.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagenes/iconogym3.png" type="image/png">
 </head>
 <body>
-    <header> 
+    <header id="h1uni"> 
         <h1 id="titulo3">&star; GYM y CALISTENIA &star;</h1>
     </header>
     <main>
