--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -6,7 +6,7 @@
     <title>Mis Hobbies</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
-<body>
+<body id="inicio">
     <header>
         <main>
             <h1 class="titulos" style="text-align: center;">🎶✨ CONCIERTOS 🎶✨</h1>
