--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -12,10 +12,10 @@
         <section>
             <header><h2 class="selector">Selector universal</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img width="500px" src="img/cuniversal.png" alt=""></li>            
             <p>Resultado</p>
-            <p></p>     
-            <li><img src="" alt=""></li>            
+            <p>Se le aplicó a toda la página color azul a la letra y tipo de letra Times New Roman</p>     
+            <img width="550px" src="img/universal.png" alt="Resultado selector universal"></li>
         </section>
 
         <section>
