Selector hermano adyacente agregado

--- a/aLe.php27/pasatiempos_v2/pasatiempo1.html
+++ b/aLe.php27/pasatiempos_v2/pasatiempo1.html
@@ -49,7 +49,7 @@
         </div>
     </div>
   </main>
-  <aside class="asidepasatiempos">
+  <aside class="asidepasatiempos" id="a1">
     <h3>Recomendaciones de Ale</h3>
     <ul>
         <li><a target="_blank" href="https://store.steampowered.com/app/588650/Dead_Cells/">Dead Cells</a></li>
