--- a/oswtobias06/pasatiempos2/index.html
+++ b/oswtobias06/pasatiempos2/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <header>
+    <header id="titulo">
         <h1>Pasatiempos - Oswaldo Tobias</h1>
     </header>
     <main class="parraf">
