--- a/oswtobias06/pasatiempos2/pag5.html
+++ b/oswtobias06/pasatiempos2/pag5.html
@@ -82,7 +82,7 @@
         </table>
         <br>
         <h3>Recomendaciones para implementar a mis pasatiempos</h3>
-        <form action="">
+        <form id="form" action="">
             <label for="nombre">Nombre</label>
             <input placeholder="Tu nombre aqui" type="text" name="nombre" id="nombre">
 
