--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -12,7 +12,7 @@
         <section>
             <header><h2 class="selector">Selector universal</h2></header>
             <h3>Código CSS</h3>
-            <img width="500px" src="img/cuniversal.png" alt=""></li>            
+            <img width="500px" src="img/cuniversal.png" alt="Código de selector universal"></li>            
             <p>Resultado</p>
             <p>Se le aplicó a toda la página color azul a la letra y tipo de letra Times New Roman</p>     
             <img width="550px" src="img/universal.png" alt="Resultado selector universal"></li>
@@ -21,28 +21,28 @@
         <section>
             <header><h2 class="selector">Selector de Tipo</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img width="500px" src="img/cdtipo.png" alt="Código de selector de tipo">
             <p>Resultado</p>
-            <p></p>     
-            <li><img src="" alt=""></li>            
+            <p>Redondeo de imagen 1 de concierto</p>     
+            <img width=250px" src="img/dtipo.png" alt="Resultado selector de tipo">           
         </section>
 
         <section>
             <header><h2 class="selector">Selector por ID</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img src="" alt="">
             <p>Resultado</p>
             <p></p>     
-            <li><img src="" alt=""></li>            
+            <img src="" alt="">            
         </section>
 
         <section>
             <header><h2 class="selector">Selector por clase</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img src="" alt="">
             <p>Resultado</p>
             <p></p>     
-            <li><img src="" alt=""></li>            
+            <img src="" alt="">            
         </section>
 
         <section>
