Selector de hermano general agregado, practica 5 completada

--- a/aLe.php27/pasatiempos_v2/pasatiempo2.html
+++ b/aLe.php27/pasatiempos_v2/pasatiempo2.html
@@ -13,10 +13,12 @@
     <h1>🎵 Musica</h1>
     <p>Mi lugar seguro antes, durante y después de mi día</p>
   </header>
-  <main class="mainpasatiempos_musica">
+  <main class="mainpasatiempos_musica" id="m2">
     <h2>Presentemos a los top artistas de mi Spotify...</h2>
     <img class="artistasdecoracion" src="imagenes/topartistas.png" alt="Top artistas de Spotify">
     <p>Desde siempre he sido muy versatil en el lado de la musica, mi top de artistas de Spotify es el claro ejemplo de ello, en primer lugar siempre por los siglos de los siglos estará The Weeknd, ya lo que sigue puede variar, puedo estar depresivo como Lana del Rey o Junior H, puedo ser alucin para escuchar Fuerza Regida, o simplemente soy migajero de corazón para escuchar José José. Pero mi mood favorito es CACHIRULO!</p>
+    <br>
+    <p>Un dato curioso de todo esto es que, dependiendo que artista escuche en la mañana es como quisiera que fuera mi dia, exceptuando los artistas que hablan de desamor, claro está:P</p>
   </main>
   <aside class="asidepasatiempos_musica">
     <h3>🎧Top 5: Canciones de The Weeknd favoritas de Ale</h3>
