Lavado de paleta de colores a la pagina de Selectores, cambios en el estilo, proximamente index de evidencias con estilos

--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bodyselectores">
     <header class="headerselectores">
-        <h1>©️Selectores CSS utilizados</h1>
+        <h1>Selectores CSS utilizados</h1>
     </header>
     <main class="mainselectores">
             <section id="s505">
