Se implementaron nuevas capturas de los selectores (atributo, lista y descendientes)

--- a/Hugo-0699/pasatiemposmod/pasatiempo2.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo2.html
@@ -32,7 +32,7 @@
                 </dl>
             </section>
 
-            <section class="contenedor-img">
+            <section class="contenedor-img" cfondo="favorito">
                 <img width="300px" src="imagenes/nnt2.jpg" alt="Un videojuego The Seven Deadly Sins para moviles hecho por Netmarble">
                 <dl>
                     <dt>
