--- a/Hugo-0699/pasatiemposmod/pasatiempo4.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo4.html
@@ -26,7 +26,7 @@
                 </figure>
 
                 <!-- Formulario -->
-                 <form class="formulario-escritura" action="">
+                 <form class="formulario-escritura" action="" id="colortabla">
                     <table>
                         <tr>
                             <td colspan="2"><h3>A continuación, responde el siguiente formulario:</h3></td>
