--- a/Hugo-0699/selectores_css/index.html
+++ b/Hugo-0699/selectores_css/index.html
@@ -40,18 +40,18 @@
             </section>
             <section class="sectionselector">
                 <h3>Selector por Atributo</h3>
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img_selectores/s_atributo.png" alt="">
+                <img src="img_selectores/s_atributo2.png" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Lista</h3>
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img_selectores/s_lista.png" alt="">
+                <img src="img_selectores/s_lista2.png" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Descendientes</h3>
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img_selectores/s_desc.png" alt="">
+                <img src="img_selectores/s_desc2.png" alt="">
             </section>
             <section class="sectionselector">
                 <h3>Selector por Hijos Directos</h3>
