agregar ev5 al index

--- a/oswtobias06/index.html
+++ b/oswtobias06/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evidencias OITT</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
@@ -12,6 +13,7 @@
     <main>
         <article>
             <h2>EVIDENCIA 1</h2>
+        <section>
             <h3>Practica 1</h3>
         <p>En la practica 1 de la evidencia 1, hicimos una sencilla pagina web donde platicamos sobre nuestros pasatiempos favoritos.</p>
         <h3>Links - Fechas del 13 a 15 de agosto</h3>
@@ -21,8 +23,8 @@
 </a></li>
         <li><a href="https://github.com/oswtobias06/EV1practica1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Commits
 </a></li>
-        </article>
-        <article>
+        </section>
+        <section>
             <h3>Practica 2</h3>
         <p>En la practica 2 de la evidencia 1, creamos nuestra carpeta de evidencias donde ajuntamos todos los links de las practicas que vamos haciendo, todo esto dentro del repositorio de la clase</p>
         <h3>Links - Fechas del 20 a 22 de agosto</h3>
@@ -30,8 +32,8 @@
 </a></li>
         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-08-20&until=2025-08-22" target="_blank">Commits
 </a></li>
-        </article>
-        <article>
+        </section>
+        <section>
             <h3>Practica 3</h3>
         <p>En la practica 3 de la evidencia 1, retomamos el trabajo de la evidencia 1 que trataba sobre nuestros pasatiempos para modificarla aqui, de manera que se dividió en 5 páginas que describen los pasatiempos y nuevas funciones, las cuales se acceden desde un menú principal, </p>
         <h3>Links - Fechas del 27 a 29 de agosto</h3>
@@ -41,13 +43,23 @@
 </a></li>
         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-08-27&until=2025-08-29" target="_blank">Commits 
 </a></li>
-        </article>
-        <article>
+        </section>
+        <section>
             <h3>Practica 4</h3>
         <p>En la practica 4 de la evidencia 1, aplicamos un estilo personalizado a cada uno de nuestros links de la carpeta de trabajos y evidencias de cada quien, dependiendo de cada estilo de diseño que tiene cada uno, entonces lo diseñamos a nuestro modo</p>
         <h3>Links - Fechas del 1 a 3 de septiembre</h3>
         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-09-01&until=2025-09-03"> Commits
 </a></li>
+        </section>
+        <section>
+            <h3>Practica 5</h3>
+        <p>En la practica 5 de la evidencia 1, hicimos una nueva página donde demostramos el uso de todos los selectores de CSS que vimos en clase en nuestra página de pasatiempos. </p>
+        <h3>Links - Fechas del 8 a 10 de septiembre</h3>
+        <li><a href="https://fdw52ad2025.github.io/website52/oswtobias06/selectores/select.html"> Página selectores
+</a></li>
+        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-09-08&until=2025-09-10"> Commits
+</a></li>
+        </section>
         </article>
     </main>
     <aside></aside>
