--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -9,9 +9,73 @@
         <header>
             <h1>Selectores</h1>
         </header>
-        <main></main>
+        <main>
+            <article>
+                <section>
+                    <h3>Selector universal</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector de tipo</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector por ID</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector por clase</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector por atributo</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector de lista</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector de descendientes</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector hijos directos</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector hermano adyacente</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+
+                <section>
+                    <h3>Selector hermano general</h3>
+
+                    <h3>Resultados</h3>
+                </section>
+            </article>
+        </main>
         <footer>
-            <address></address>
+            <address>
+                <p>Desarrollado por Juan Antonio Cerda Chávez</p>
+            </address>
         </footer>
     </body>
 </html>
