Se cambio estructura del index

--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -13,60 +13,70 @@
             <article>
                 <section>
                     <h3>Selector universal</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector de tipo</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector por ID</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector por clase</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector por atributo</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector de lista</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector de descendientes</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector hijos directos</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector hermano adyacente</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
 
                 <section>
                     <h3>Selector hermano general</h3>
+                    <h3>Imagen del css aplicado</h3>
 
                     <h3>Resultados</h3>
                 </section>
