--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evidencias</title>
+    <title>Evidencias_ASC</title>
     <link rel="stylesheet" href="estilosindex.css">
     <link rel="icon" href="iconevidencias.png" type="image/png">
 </head>
@@ -17,7 +17,7 @@
         <section id="e1">
             <h3>Practica 1 - 13/08/2025 al 15/08/2025</h3>
             <p>Para la practica 1 desarrolle una pagina web sencilla con tematica de 4 pasatiempos mios, estuve contando con la estructura base, header, main, footer. Además de utilizar etiquetas como article, section para separar cada pasatiempo. Todo fue subido a un repositorio personal alojado en GitHub, además se subio a la internet por medio de GitHub y también se tomaron en cuenta las fechas de los commit, teniendo que quedar en un rango del 13/08/2025 al 15/08/2025.</p>
-                <ul>
+                <ul class="listabotones">
                 <li><a target="_blank" href="https://github.com/myAle27admin/Ev1Prac1_ASC.git">REPOSITORIO</a></li>
                 <li><a target="_blank" href="https://myale27admin.github.io/Ev1Prac1_ASC/">SITIO PUBLICADO</a></li>
                 <li><a target="_blank" href="https://github.com/myAle27admin/Ev1Prac1_ASC/commits/main?since=2025-08-13&until=2025-08-15">COMMITS DEL 13/08/2025 AL 15/08/2025</a></li>
@@ -26,7 +26,7 @@
         <section id="e1">
             <h3>Practica 2 - 20/08/2025 al 22/08/2025</h3>
             <p>Para la practica 2 se alojaron los primeros links de la practica 1 en el repositorio de la organización</p>
-                <ul>
+                <ul class="listabotones">
                 <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/aLe.php27/index.html">PAGINA PERSONAL</a></li>
                 <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=myAle27admin&since=2025-08-20&until=2025-08-22">COMMITS DEL 20/08/2025 al 22/08/2025</a></li>
                 </ul>
@@ -34,7 +34,7 @@
         <section id="e1">
                 <h3>Practica 3 - 27/08/2025 al 29/08/2025</h3>
             <p>Para la practica 3 tome de inspiración la página pasatiempos personal para realizar la versión 2.0 pero esta vez la tuve que guardar en la organización. Utilicé 5 archivos html para la información de mis pasatiempos. En cada documento html utilicé etiquetas de estructura (header,nav, main,aside,footer). También nuevas etiquetas del material de clase y por ultimo diseñe un formulario (form).</p>
-                <ul>
+                <ul class="listabotones">
                 <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/aLe.php27/pasatiempos_v2/index.html">PASATIEMPOS V2</a></li>
                 <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits?author=myAle27admin&since=2025-08-27&until=2025-08-27">COMMITS HECHOS EN CLASE 27/08/2025</a></li>
                 <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits?author=myAle27admin&since=2025-08-27&until=2025-08-29">COMMITS DEL 27/08/2025 al 29/08/2025</a></li>
@@ -43,14 +43,14 @@
         <section id="e1">
                 <h3>Practica 4 - 01/09/2025 al 03/09/2025</h3>
             <p>Para la practica 4 solo puse un estilo a mi link en la pagina principal de la organización.</p>
-                <ul>
+                <ul class="listabotones">
                 <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits?author=myAle27admin&since=2025-09-01&until=2025-09-03">COMMITS DEL 01/09/2025 al 03/09/2025</a></li>
                 </ul>
         </section>
         <section id="e1">
             <h3>Practica 5 - 08/09/2025 al 10/09/2025</h3>
             <p>Para la practica 5, utilice mis archivos HTML sobre mis pasatiempos versión 2 para crear un sitio donde muestro que utilice al menos 1 tipo de selector CSS.</p>
-            <ul>
+            <ul class="listaselectores">
                 <li>Selector universal</li>
                 <li>Selector de tipo</li>
                 <li>Selector por ID</li>
@@ -62,7 +62,7 @@
                 <li>Selectot de hermanos adyacentes </li>
                 <li>Selector de hermanos generales</li>
             </ul>
-                <ul>
+                <ul class="listabotones">
                 <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/aLe.php27/selectorescss/index.html">PÁGINA DE LOS SELECTORES</a></li>
                 <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits?author=myAle27admin&since=2025-09-08&until=2025-09-10">COMMITS DEL 08/09/2025 al 10/09/2025</a></li>
                 </ul>
@@ -70,7 +70,7 @@
                 <section id="e1">
             <h3>Practica 6 - 10/09/2025 al 12/09/2025</h3>
             <p>Kokokoko...</p>
-                <ul>
+                <ul class="listabotones">
                 <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/aLe.php27/selectorescss/index.html">PÁGINA DEL EJEMPLO DE FLEX</a></li>
                 <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits?author=myAle27admin&since=2025-09-10&until=2025-09-12">COMMITS DEL 10/09/2025 al 12/09/2025</a></li>
                 </ul>
@@ -83,7 +83,7 @@
         </div> -->
     </main>
     <aside class="asideevidencias">
-        <p>Proximamente irá algo bueno aquí...</p>
+        <p>Si estás comiendo, ten buen provechito...</p>
     </aside>
     <footer class="footerevidencias">
         <address>
