--- a/atchz/pasatiempos2/pasatiempo1.html
+++ b/atchz/pasatiempos2/pasatiempo1.html
@@ -6,6 +6,7 @@
         <meta name="author" content="atchz" />
         <meta name="description" content="Pagina sobre mi primer pasatiempo" />
         <meta name="keywords" content="uanl,facpya,lti" />
+        <link rel="stylesheet" href="estilos1.css" />
         <title>Pasatiempo 1</title>
     </head>
     <body>
