--- a/atchz/practica5/index.html
+++ b/atchz/practica5/index.html
@@ -15,8 +15,15 @@
                 <section>
                     <h3>Selector universal</h3>
                     <h3>Código CSS</h3>
-
+                    <img
+                        src="imgs/selector_universal.png"
+                        alt="codigo del selector universal"
+                    />
                     <h3>Resultados:</h3>
+                    <img
+                        src="imgs/resultado_universal.png"
+                        alt="resultado del selector"
+                    />
                 </section>
 
                 <section>
